# forza4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/connect4/: board.h  eval.h  movegen.h  zobrist.h
include/core/: bitops.h  hashmap.h  log.h  pool.h  ringbuf.h  rng.h  time.h  vec.h
include/engine/: search.h  tt.h
include/game/: api.h  connect4_adapter.h  nim.h
src/connect4/: board.c  eval.c  movegen.c  zobrist.c
src/core/: bitops.c  hashmap.c  log.c  pool.c  ringbuf.c  rng.c  time.c  vec.c
src/engine/: search.c  tt.c
src/game/: api.c  connect4_adapter.c  nim.c
tools/: connect4_client_cocoa.m  search_cli.c  selfplay_cli.c
